teleport_cluster/eks_cluster/k8sfiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dk-k8s.teleportdemo.com
    secretName: quickstart-example-tls
  rules:
  - host: dk-k8s.teleportdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teleport
            port:
              number: 443
